--- a/App18.Material/Styles/Other.xaml
+++ b/App18.Material/Styles/Other.xaml
@@ -1,20 +1,7 @@
 ﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:md3="http://materialdesigninxaml.net/winfx/xaml/themes"
-    xmlns:ct="clr-namespace:App18.Material.Converters">
-
-    <ct:BrushOpacityConverter x:Key="BrushOpacityConverter" />
-
-    <Style x:Key="MaterialDesign3Grid" TargetType="{x:Type Grid}">
-        <Setter Property="Background"
-                Value="{Binding Background, ElementName=PartDot, Converter={StaticResource BrushOpacityConverter}, ConverterParameter=0.4}" />
-    </Style>
-
-    <Style x:Key="MaterialDesign3DockPanel" TargetType="{x:Type DockPanel}">
-        <Setter Property="Background"
-                Value="{Binding Background, ElementName=PartDot, Converter={StaticResource BrushOpacityConverter}, ConverterParameter=0.4}" />
-    </Style>
+    xmlns:md3="http://materialdesigninxaml.net/winfx/xaml/themes">
 
     <Style x:Key="MaterialDesign3Button" TargetType="{x:Type ButtonBase}">
         <Setter Property="Background"
@@ -100,8 +87,7 @@
                 Value="{DynamicResource MaterialDesign.Brush.Primary}" />
         <Setter Property="md3:ButtonProgressAssist.IsIndicatorVisible" Value="False" />
         <Setter Property="md3:ButtonProgressAssist.Opacity" Value=".4" />
-        <Setter Property="md3:RippleAssist.Feedback"
-                Value="{DynamicResource MaterialDesign.Brush.Primary}" />
+        <Setter Property="md3:RippleAssist.Feedback" Value="{DynamicResource MaterialDesign.Brush.Primary}" />
     </Style>
 
 </ResourceDictionary>
