--- a/App22.Selected/Styles/Other.xaml
+++ b/App22.Selected/Styles/Other.xaml
@@ -16,8 +16,8 @@
     </DataTemplate>
 
     <Style x:Key="M3ChoiceChipPrimaryListBoxItem" TargetType="{x:Type ListBoxItem}">
-        <Setter Property="Background" Value="Transparent" />
-        <Setter Property="BorderBrush" Value="{DynamicResource MaterialDesign.Brush.ListBoxItem.Border}" />
+        <Setter Property="Background" Value="{DynamicResource MaterialDesign.Brush.Secondary}" />
+        <Setter Property="BorderBrush" Value="{DynamicResource MaterialDesign.Brush.Secondary}" />
         <Setter Property="BorderThickness" Value="0" />
         <Setter Property="HorizontalContentAlignment"
                 Value="{Binding HorizontalContentAlignment, RelativeSource={RelativeSource AncestorType={x:Type ItemsControl}}}" />
@@ -31,8 +31,8 @@
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type ListBoxItem}">
                     <Border Margin="{TemplateBinding Margin}"
-                            Background="{TemplateBinding Background}"
-                            BorderBrush="{TemplateBinding BorderBrush}"
+                            Background="Transparent"
+                            BorderBrush="Transparent"
                             BorderThickness="{TemplateBinding BorderThickness}"
                             ClipToBounds="{TemplateBinding ClipToBounds}">
                         <VisualStateManager.VisualStateGroups>
@@ -60,7 +60,7 @@
                                     <VisualTransition From="*" To="Selected">
                                         <Storyboard>
                                             <DoubleAnimationUsingKeyFrames
-                                                Storyboard.TargetName="SelectedBackgroundBorder"
+                                                Storyboard.TargetName="SelectedBackground"
                                                 Storyboard.TargetProperty="Opacity">
                                                 <EasingDoubleKeyFrame KeyTime="0" Value="1" />
                                             </DoubleAnimationUsingKeyFrames>
@@ -69,7 +69,7 @@
                                     <VisualTransition From="*" To="SelectedUnfocused">
                                         <Storyboard>
                                             <DoubleAnimationUsingKeyFrames
-                                                Storyboard.TargetName="SelectedBackgroundBorder"
+                                                Storyboard.TargetName="SelectedBackground"
                                                 Storyboard.TargetProperty="Opacity">
                                                 <EasingDoubleKeyFrame KeyTime="0" Value="1" />
                                             </DoubleAnimationUsingKeyFrames>
@@ -77,7 +77,7 @@
                                     </VisualTransition>
                                     <VisualTransition From="Selected" To="Unselected">
                                         <Storyboard>
-                                            <DoubleAnimation Storyboard.TargetName="SelectedBackgroundBorder"
+                                            <DoubleAnimation Storyboard.TargetName="SelectedBackground"
                                                              Storyboard.TargetProperty="Opacity"
                                                              To="0"
                                                              Duration="0" />
@@ -86,7 +86,7 @@
                                 </VisualStateGroup.Transitions>
                                 <VisualState Name="Selected">
                                     <Storyboard>
-                                        <DoubleAnimation Storyboard.TargetName="SelectedBackgroundBorder"
+                                        <DoubleAnimation Storyboard.TargetName="SelectedBackground"
                                                          Storyboard.TargetProperty="Opacity"
                                                          To="1"
                                                          Duration="0" />
@@ -99,7 +99,7 @@
                                 <VisualState Name="Unselected" />
                                 <VisualState Name="SelectedUnfocused">
                                     <Storyboard>
-                                        <DoubleAnimation Storyboard.TargetName="SelectedBackgroundBorder"
+                                        <DoubleAnimation Storyboard.TargetName="SelectedBackground"
                                                          Storyboard.TargetProperty="Opacity"
                                                          To="1"
                                                          Duration="0" />
@@ -112,16 +112,16 @@
                             </VisualStateGroup>
                         </VisualStateManager.VisualStateGroups>
                         <Grid>
-                            <Ellipse x:Name="GeometryEllipse2"
-                                     Fill="{DynamicResource MaterialDesign.Brush.TextBox.FilledBackground}"
+                            <Ellipse x:Name="EllipseBackground"
+                                     Fill="{TemplateBinding Foreground, Converter={StaticResource BrushOpacityConverter}, ConverterParameter=0.16}"
                                      Focusable="False"
                                      IsHitTestVisible="False" />
                             <Border x:Name="MouseOverBorder"
-                                    Background="{TemplateBinding Foreground, Converter={StaticResource BrushRoundConverter}}"
+                                    Background="{TemplateBinding Background, Converter={StaticResource BrushRoundConverter}}"
                                     Opacity="0"
                                     CornerRadius="15" />
-                            <Border x:Name="SelectedBackgroundBorder"
-                                    Background="{DynamicResource MaterialDesign.Brush.Primary.Light}"
+                            <Border x:Name="SelectedBackground"
+                                    Background="{TemplateBinding Background, Converter={StaticResource BrushOpacityConverter}, ConverterParameter=0.66}"
                                     Opacity="0"
                                     CornerRadius="15" />
                             <m3:Ripple x:Name="Ripple"
@@ -135,10 +135,10 @@
                                        ContentTemplateSelector="{TemplateBinding ContentTemplateSelector}"
                                        Feedback="{TemplateBinding Foreground, Converter={StaticResource BrushRoundConverter}}"
                                        Focusable="False"
-                                       Opacity=".56"
+                                       Opacity=".92"
                                        SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" />
                             <Border x:Name="SelectedBorder"
-                                    BorderBrush="{DynamicResource MaterialDesign.Brush.ListBoxItem.Selected}"
+                                    BorderBrush="{TemplateBinding Background, Converter={StaticResource BrushOpacityConverter}, ConverterParameter=0.66}"
                                     BorderThickness="0"
                                     Opacity="0"
                                     Visibility="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType=ListBox}, Path=SelectionMode, Converter={StaticResource EqualityToVisibilityConverter}, ConverterParameter={x:Static SelectionMode.Extended}, Mode=OneWay}"
@@ -150,8 +150,13 @@
                         </Grid>
                     </Border>
                     <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter TargetName="EllipseBackground" Property="Fill"
+                                    Value="{Binding Foreground, RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource BrushOpacityConverter}, ConverterParameter=0.36}" />
+                        </Trigger>
                         <Trigger Property="IsSelected" Value="True">
-                            <Setter TargetName="Ripple" Property="Opacity" Value=".92" />
+                            <Setter TargetName="SelectedBackground" Property="Opacity" Value="1" />
+                            <Setter TargetName="SelectedBorder" Property="Opacity" Value="1" />
                         </Trigger>
                         <Trigger Property="IsEnabled" Value="False">
                             <Setter Property="Opacity" Value=".56" />
