--- a/App18.Material/App.xaml
+++ b/App18.Material/App.xaml
@@ -1,13 +1,13 @@
 ﻿<Application x:Class="App18.Material.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:md3="http://materialdesigninxaml.net/winfx/xaml/themes"
+             xmlns:m3="http://materialdesigninxaml.net/winfx/xaml/themes"
              StartupUri="Views/MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <md3:BundledTheme BaseTheme="Inherit" ColorAdjustment="{md3:ColorAdjustment}" PrimaryColor="Orange"
-                                  SecondaryColor="Lime" />
+                <m3:BundledTheme BaseTheme="Inherit" ColorAdjustment="{m3:ColorAdjustment}" PrimaryColor="Orange"
+                                 SecondaryColor="Lime" />
                 <ResourceDictionary
                     Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesign3.Defaults.xaml" />
                 <ResourceDictionary
