--- a/App18.Material/Styles/Other.xaml
+++ b/App18.Material/Styles/Other.xaml
@@ -1,11 +1,14 @@
 ﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:md3="http://materialdesigninxaml.net/winfx/xaml/themes">
+    xmlns:m3="http://materialdesigninxaml.net/winfx/xaml/themes"
+    xmlns:cv="clr-namespace:App18.Material.Converters">
+
+    <cv:BorderClipConverter x:Key="BorderClipConverter" />
 
     <Style x:Key="MaterialDesign3Button" TargetType="{x:Type ButtonBase}">
         <Setter Property="Background"
-                Value="{Binding Foreground, RelativeSource={RelativeSource Self}, Converter={StaticResource BrushOpacityConverter}, ConverterParameter=0.16}" />
+                Value="{Binding Foreground, RelativeSource={RelativeSource Self}, Converter={x:Static m3:BrushOpacityConverter.Instance}, ConverterParameter=0.16}" />
         <Setter Property="BorderBrush" Value="Transparent" />
         <Setter Property="BorderThickness" Value="0" />
         <Setter Property="Cursor" Value="Hand" />
@@ -22,24 +25,24 @@
                                 Background="{TemplateBinding Background}"
                                 BorderBrush="{TemplateBinding BorderBrush}"
                                 BorderThickness="{TemplateBinding BorderThickness}"
-                                CornerRadius="{Binding Path=(md3:ButtonAssist.CornerRadius), RelativeSource={RelativeSource TemplatedParent}}" />
+                                CornerRadius="{Binding Path=(m3:ButtonAssist.CornerRadius), RelativeSource={RelativeSource TemplatedParent}}" />
                         <ProgressBar x:Name="ProgressBar"
                                      Width="{Binding RelativeSource={RelativeSource AncestorType=ButtonBase}, Path=ActualWidth}"
                                      Height="{TemplateBinding Height}"
                                      HorizontalAlignment="Left"
                                      VerticalAlignment="Center"
-                                     Background="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(md3:ButtonProgressAssist.IndicatorBackground)}"
-                                     BorderBrush="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(md3:ButtonProgressAssist.IndicatorBackground)}"
-                                     Foreground="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(md3:ButtonProgressAssist.IndicatorForeground)}"
-                                     IsIndeterminate="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(md3:ButtonProgressAssist.IsIndeterminate)}"
-                                     Maximum="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(md3:ButtonProgressAssist.Maximum)}"
-                                     Minimum="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(md3:ButtonProgressAssist.Minimum)}"
-                                     Opacity="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(md3:ButtonProgressAssist.Opacity)}"
+                                     Background="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(m3:ButtonProgressAssist.IndicatorBackground)}"
+                                     BorderBrush="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(m3:ButtonProgressAssist.IndicatorBackground)}"
+                                     Foreground="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(m3:ButtonProgressAssist.IndicatorForeground)}"
+                                     IsIndeterminate="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(m3:ButtonProgressAssist.IsIndeterminate)}"
+                                     Maximum="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(m3:ButtonProgressAssist.Maximum)}"
+                                     Minimum="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(m3:ButtonProgressAssist.Minimum)}"
+                                     Opacity="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(m3:ButtonProgressAssist.Opacity)}"
                                      Style="{DynamicResource MaterialDesignLinearProgressBar}"
-                                     Visibility="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(md3:ButtonProgressAssist.IsIndicatorVisible), Converter={StaticResource BooleanToVisibilityConverter}}"
-                                     Value="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(md3:ButtonProgressAssist.Value)}">
+                                     Visibility="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(m3:ButtonProgressAssist.IsIndicatorVisible), Converter={x:Static m3:BooleanToVisibilityConverter.CollapsedInstance}}"
+                                     Value="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(m3:ButtonProgressAssist.Value)}">
                             <ProgressBar.Clip>
-                                <MultiBinding Converter="{StaticResource BorderClipConverter}">
+                                <MultiBinding Converter="{x:Static cv:BorderClipConverter.Instance}">
                                     <Binding ElementName="border" Path="ActualWidth" />
                                     <Binding ElementName="border" Path="ActualHeight" />
                                     <Binding ElementName="border" Path="CornerRadius" />
@@ -48,28 +51,28 @@
                             </ProgressBar.Clip>
                         </ProgressBar>
 
-                        <md3:Ripple Padding="{TemplateBinding Padding}"
-                                    HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
-                                    VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"
-                                    Content="{TemplateBinding Content}"
-                                    ContentStringFormat="{TemplateBinding ContentStringFormat}"
-                                    ContentTemplate="{TemplateBinding ContentTemplate}"
-                                    Focusable="False"
-                                    SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}">
-                            <md3:Ripple.Clip>
-                                <MultiBinding Converter="{StaticResource BorderClipConverter}">
+                        <m3:Ripple Padding="{TemplateBinding Padding}"
+                                   HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                   VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"
+                                   Content="{TemplateBinding Content}"
+                                   ContentStringFormat="{TemplateBinding ContentStringFormat}"
+                                   ContentTemplate="{TemplateBinding ContentTemplate}"
+                                   Focusable="False"
+                                   SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}">
+                            <m3:Ripple.Clip>
+                                <MultiBinding Converter="{x:Static cv:BorderClipConverter.Instance}">
                                     <Binding ElementName="border" Path="ActualWidth" />
                                     <Binding ElementName="border" Path="ActualHeight" />
                                     <Binding ElementName="border" Path="CornerRadius" />
                                     <Binding ElementName="border" Path="BorderThickness" />
                                 </MultiBinding>
-                            </md3:Ripple.Clip>
-                        </md3:Ripple>
+                            </m3:Ripple.Clip>
+                        </m3:Ripple>
                     </Grid>
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsMouseOver" Value="true">
                             <Setter TargetName="border" Property="Background"
-                                    Value="{Binding Foreground, RelativeSource={RelativeSource Mode=TemplatedParent}, Converter={StaticResource BrushOpacityConverter}, ConverterParameter=0.36}" />
+                                    Value="{Binding Foreground, RelativeSource={RelativeSource Mode=TemplatedParent}, Converter={x:Static m3:BrushOpacityConverter.Instance}, ConverterParameter=0.36}" />
                         </Trigger>
                         <Trigger Property="IsEnabled" Value="false">
                             <Setter Property="Opacity" Value="0.38" />
@@ -81,13 +84,13 @@
         <Setter Property="TextBlock.FontSize" Value="14" />
         <Setter Property="TextBlock.FontWeight" Value="Medium" />
         <Setter Property="VerticalContentAlignment" Value="Center" />
-        <Setter Property="md3:ButtonAssist.CornerRadius" Value="2" />
-        <Setter Property="md3:ButtonProgressAssist.IndicatorBackground" Value="Transparent" />
-        <Setter Property="md3:ButtonProgressAssist.IndicatorForeground"
+        <Setter Property="m3:ButtonAssist.CornerRadius" Value="2" />
+        <Setter Property="m3:ButtonProgressAssist.IndicatorBackground" Value="Transparent" />
+        <Setter Property="m3:ButtonProgressAssist.IndicatorForeground"
                 Value="{DynamicResource MaterialDesign.Brush.Primary}" />
-        <Setter Property="md3:ButtonProgressAssist.IsIndicatorVisible" Value="False" />
-        <Setter Property="md3:ButtonProgressAssist.Opacity" Value=".4" />
-        <Setter Property="md3:RippleAssist.Feedback" Value="{DynamicResource MaterialDesign.Brush.Primary}" />
+        <Setter Property="m3:ButtonProgressAssist.IsIndicatorVisible" Value="False" />
+        <Setter Property="m3:ButtonProgressAssist.Opacity" Value=".4" />
+        <Setter Property="m3:RippleAssist.Feedback" Value="{DynamicResource MaterialDesign.Brush.Primary}" />
     </Style>
 
 </ResourceDictionary>
