--- a/App18.Material/Views/Demo/PageChild1.xaml
+++ b/App18.Material/Views/Demo/PageChild1.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:md3="http://materialdesigninxaml.net/winfx/xaml/themes"
+             xmlns:m3="http://materialdesigninxaml.net/winfx/xaml/themes"
              mc:Ignorable="d">
     <Grid>
         <Grid.RowDefinitions>
@@ -32,13 +32,13 @@
                             </StackPanel>
 
                             <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
-                                <md3:PopupBox Padding="2,0,2,0"
-                                              Style="{StaticResource MaterialDesignToolPopupBox}">
+                                <m3:PopupBox Padding="2,0,2,0"
+                                             Style="{StaticResource MaterialDesignToolPopupBox}">
                                     <StackPanel>
                                         <Button Content="More" />
                                         <Button Content="Options" />
                                     </StackPanel>
-                                </md3:PopupBox>
+                                </m3:PopupBox>
                             </StackPanel>
                         </DockPanel>
 
